stream-utils (0.3.1) UNRELEASED; urgency=low

  * using stream roles instead of deprecated caps

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 11 Aug 2010 20:03:55 +0400

stream-utils (0.3.0) unstable; urgency=low

  * 'pump' command
  * 'info' command

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 22 Jun 2010 15:01:37 +0400

stream-utils (0.2.0) unstable; urgency=low

  * rewritten using App::Cmd
  * 'head' command supports --limit option

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 21 Jun 2010 23:10:32 +0400

stream-utils (0.1.3) unstable; urgency=low

  * chomp simple lines if possible
  * POD improved, fixed and tested

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 14 Sep 2009 21:52:43 +0400

stream-utils (0.1.2) unstable; urgency=low

  * bash_completion renamed and now completes cursors as input streams too

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 17 Jul 2009 21:26:35 +0400

stream-utils (0.1.1) unstable; urgency=low

  * more POD
  * bash_completion packaged

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 17 Jul 2009 21:22:59 +0400

stream-utils (0.1.0) unstable; urgency=low

  * Initial release

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Sun, 05 Jul 2009 18:58:46 +0400