@@ -1,6 +1,7 @@
 stream-utils (0.3.1) UNRELEASED; urgency=low
 
   * using stream roles instead of deprecated caps
+  * stream info --storage can print client names
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 11 Aug 2010 20:03:55 +0400
 
